--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -19,4 +19,5 @@ body{
     background-size: cover;
     font-family: Roboto;
     height: 1800px;
+    overflow: hidden;
 }
